Fix text view Nexa font rendering by adding a small amount of lineSpacingExtra

--- a/VAKidney/app/src/main/res/values/styles.xml
+++ b/VAKidney/app/src/main/res/values/styles.xml
@@ -8,6 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/nexa_light</item>
         <item name="fontFamily">@font/nexa_light</item>
+
+        <item name="android:textViewStyle">@style/TextViewStyle</item>
+    </style>
+
+    <style name="TextViewStyle" parent="android:Widget.TextView">
+        <!--Add line spacing to combat Nexa font descender rendering issues with lowercase 'g'-->
+        <item name="android:lineSpacingExtra">1dp</item>
     </style>
 
 </resources>
