--- a/VAKidney/app/src/main/res/layout/item_add_mealdrug.xml
+++ b/VAKidney/app/src/main/res/layout/item_add_mealdrug.xml
@@ -11,6 +11,12 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Meat"/>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="10dp"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/tvAmount"
         android:layout_width="wrap_content"
