Fixed for issue #81

--- a/VAKidney/app/src/main/res/layout/popup_add_mealdrug.xml
+++ b/VAKidney/app/src/main/res/layout/popup_add_mealdrug.xml
@@ -69,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginTop="5dp"
+                android:maxLength="6"
                 android:background="@drawable/bg_round_white"
                 android:inputType="numberDecimal"
                 android:paddingLeft="@dimen/app_standard_padding"
