--- a/VAKidney/app/src/main/res/layout/item_grid_food.xml
+++ b/VAKidney/app/src/main/res/layout/item_grid_food.xml
@@ -15,10 +15,8 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="96dp"
-            android:layout_marginLeft="@dimen/app_standard_padding"
-            android:layout_marginRight="2dp"
-            android:layout_marginTop="@dimen/app_standard_padding"
+            android:layout_height="101dp"
+            android:layout_margin="2dp"
             android:scaleType="centerCrop"
             android:src="@drawable/profile_bg"
             android:background="@drawable/bg_white_rounded" />
@@ -85,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="0dp"
             android:background="@color/colorLightGray" />
 
         <TextView
