--- a/VAKidney/app/src/main/res/layout/activity_main.xml
+++ b/VAKidney/app/src/main/res/layout/activity_main.xml
@@ -203,7 +203,7 @@
                 android:layout_marginBottom="4dp"
                 android:gravity="center"
                 android:lines="1"
-                android:text="Recommendations"
+                android:text="Nutrition and Drug Interaction"
                 android:textColor="@color/brandBlueLight"
                 android:textSize="11sp" />
         </LinearLayout>
