--- a/VAKidney/app/src/main/res/layout/fragment_my_profile.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_my_profile.xml
@@ -97,7 +97,18 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:background="@drawable/bg_left_rounded_accent"
-                    android:orientation="horizontal"/>
+                    android:orientation="horizontal">
+
+                  <android.support.v7.widget.AppCompatImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/app_standard_padding"
+                    android:tint="@color/colorWhite"
+                    app:srcCompat="@drawable/ic_avatar"
+
+                    />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
