--- a/VAKidney/app/src/main/res/layout/fragment_home1.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_home1.xml
@@ -352,7 +352,9 @@
                     android:textSize="16sp"
                     android:text="John Smith"
                     android:gravity="center"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/standard_padding_half"
+                    android:layout_marginEnd="@dimen/app_standard_padding"/>
             </FrameLayout>
             <ImageView
                 android:layout_width="40dp"
