--- a/VAKidney/app/src/main/res/layout/activity_add_new_goal.xml
+++ b/VAKidney/app/src/main/res/layout/activity_add_new_goal.xml
@@ -191,6 +191,7 @@
                             android:padding="@dimen/app_standard_padding">
 
                             <Switch
+                                android:id="@+id/reminderSwitch"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content" />
                         </LinearLayout>
