--- a/VAKidney/app/src/main/res/layout/fragment_home2.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_home2.xml
@@ -1,97 +1,101 @@
-<layout  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorLightGray"
-    android:padding="30dp"
-    android:orientation="vertical"
-    android:gravity="center"
-    tools:context="com.topcoder.vakidney.fragments.home.Home2Fragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:background="@drawable/bg_white_rounded"
-        android:padding="20dp">
+        android:layout_height="match_parent"
+        android:background="@color/colorLightGray"
+        android:fillViewport="true">
 
-        <ImageView
-            android:layout_width="170dp"
-            android:layout_height="85dp"
-            android:src="@drawable/profile_bg"
-            android:background="@drawable/bg_white_rounded"
-            />
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="The Best for you Stamina"
-            android:textColor="@color/colorPitchBlack"
-            android:textSize="16dp"
-            android:layout_marginTop="@dimen/app_standard_padding"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:textStyle="bold"
-            />
+            android:orientation="vertical"
+            android:padding="30dp"
+            tools:context="com.topcoder.vakidney.fragments.home.Home2Fragment">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_white_rounded"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="20dp">
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:layout_width="170dp"
+                    android:layout_height="85dp"
+                    android:background="@drawable/bg_white_rounded"
+                    android:src="@drawable/profile_bg" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/app_standard_padding"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:text="The Best for you Stamina"
+                    android:textColor="@color/colorPitchBlack"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/app_standard_padding"
-            android:text="Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim."
-            android:textColor="@color/colorDarkGray"
-            android:textSize="13dp"
-            android:maxLines="2"
-            android:gravity="center"
-            />
+                <android.support.v7.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/app_standard_padding"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:maxLines="2"
+                    android:text="Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim."
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="13dp" />
 
-    </LinearLayout>
+            </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/bg_white_rounded"
-        android:padding="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/bg_white_rounded"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="20dp">
 
-        <ImageView
-            android:layout_width="170dp"
-            android:layout_height="85dp"
-            android:src="@drawable/profile_bg"
-            android:background="@drawable/bg_white_rounded"
-            />
+                <android.support.v7.widget.AppCompatImageView
+                    android:layout_width="170dp"
+                    android:layout_height="85dp"
+                    android:background="@drawable/bg_white_rounded"
+                    android:src="@drawable/profile_bg" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Avoid This Food"
-            android:textColor="@color/colorPitchBlack"
-            android:textSize="16dp"
-            android:layout_marginTop="@dimen/app_standard_padding"
-            android:gravity="center"
-            android:textStyle="bold"
-            />
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/app_standard_padding"
-            android:text="Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim."
-            android:textColor="@color/colorDarkGray"
-            android:textSize="13dp"
-            android:maxLines="2"
-            android:gravity="center"
-            />
-
-    </LinearLayout>
+                <android.support.v7.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/app_standard_padding"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:text="Avoid This Food"
+                    android:textColor="@color/colorPitchBlack"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
 
 
-</LinearLayout>
+                <android.support.v7.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/app_standard_padding"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:maxLines="2"
+                    android:text="Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim."
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="13dp" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </ScrollView>
+
 </layout>
